<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lblNumSiete">7</string>
    <string name="lblNumOcho">8</string>
    <string name="lblNumNueve">9</string>
    <string name="lblMas">+</string>
    <string name="lblNumCuatro">4</string>
    <string name="lblNumCinco">5</string>
    <string name="lblNumSeis">6</string>
    <string name="lblMenos">-</string>
    <string name="lblNumUno">1</string>
    <string name="lblNumDos">2</string>
    <string name="lblNumTres">3</string>
    <string name="lblMultiplicacion">x</string>
    <string name="lblNumCero">0</string>
    <string name="lblPunto">.</string>
    <string name="lblIgual">=</string>
    <string name="lblDivision">/</string>
    <string name="lblClear">C</string>

</resources>
