<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txvOperaciones"
            style="@style/operacionesTexto"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txvResultado"
                style="@style/resultadoNumero"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btnLimpiar"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblClear" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnSiete"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblNumSiete" />

            <Button
                android:id="@+id/btnOcho"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblNumOcho" />

            <Button
                android:id="@+id/btnNueve"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblNumNueve" />

            <Button
                android:id="@+id/btnMas"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblMas" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnCuatro"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblNumCuatro" />

            <Button
                android:id="@+id/btnCinco"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblNumCinco" />

            <Button
                android:id="@+id/btnSeis"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblNumSeis" />

            <Button
                android:id="@+id/btnMenos"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblMenos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnUno"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblNumUno" />

            <Button
                android:id="@+id/btnDos"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblNumDos" />

            <Button
                android:id="@+id/btnTres"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblNumTres" />

            <Button
                android:id="@+id/btnMultiplicacion"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblMultiplicacion" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnCero"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblNumCero" />

            <Button
                android:id="@+id/btnPunto"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblPunto" />

            <Button
                android:id="@+id/btnIgual"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblIgual" />

            <Button
                android:id="@+id/btnDivision"
                style="@style/botonNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblDivision" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
